# psvpp-solver

./: .coverage  LICENSE.txt  README.md  Untitled.ipynb  pyproject.bak.toml  pyproject.toml  todo.md
.ropeproject/: autoimport.db
psvpp_solver/: __about__.py  alns_alpha.py  constraints.py  constraints_pure_python.py  data_science_flowchart  get_power_set.py  schedule_simulation.py  test_graphvis.py  test_networkx.py  test_utils.py  testing_grounds.ipynb  testing_grounds.py  utils.py  utils_pure_python.py  visualize_route.py  visualize_route_python_implementation.py
psvpp_solver/testing_grounds/: calculate_sailing_costs.ipynb  generate_routes_from_visits_and_departures.ipynb  test_generate_departures_from_visits.ipynb  test_generate_routes_from_visits_and_departures.ipynb  testing_grounds__generate_departures_from_visits.ipynb  testing_grounds_utils.ipynb  try_numba.py
tests/: __init__.py  test_constraints.py  test_psvpp_solver.py  test_utils.py
