[tool.poetry]
name = "psvpp-solver"
version = "0.1.0"
description = "Solver for creating optimal schedules for periodic supply vessels"
authors = ["Jonas Oren <jonas.oren@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{ include = "psvpp_solver" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.test] # This part can be left out

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
numpy = "*"
matplotlib = "^3.7.1"
networkx = "^3.1"
numba = "^0.56.4"
ipython = "^8.13.1"
ptpython = "^3.0.23"
ptipython = "^1.0.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# TODO: For matplotlib
# sudo apt-get install python3-tk
